crates/parser/src/snapshots/parser__tests__parse_inline_err@0121_open_no_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "open\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0121_open_no_name.ath
---
OPEN_DIR
  OPEN_KW "open"
  WHITESPACE "\n"
error 5: expected module name

