crates/parser/src/snapshots/parser__tests__parse_inline_err@0125_assert_multiple_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "assert A,\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0125_assert_multiple_empty.ath
---
ASSERT_DIR
  ASSERT_KW "assert"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "A"
  COMMA ","
  WHITESPACE "\n"
error 9: expected assertion after comma

