crates/parser/src/snapshots/parser__tests__parse_inline_err@0133_named_inference_err_lookahead.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A:(OP) := (!claim B) }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0133_named_inference_err_lookahead.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      OP_ANNOTATED_PARAM
        IDENTIFIER
          IDENT "A"
        COLON ":"
        L_PAREN "("
        O_P_KW "OP"
        R_PAREN ")"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    INFERENCE
      BANG_METHOD_CALL_DED
        L_PAREN "("
        BANG "!"
        IDENT_EXPR
          IDENTIFIER
            IDENT "claim"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "B"
        R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 7: expected operator arity

