crates/parser/src/snapshots/parser__tests__parse_inline_err@0136_by_ded_partial_no_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(A by )\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0136_by_ded_partial_no_ded.ath
---
BY_DED
  L_PAREN "("
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  WHITESPACE " "
  BY_KW "by"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 5: expected a deduction

